...
                  Text(
                    'Entre com sua conta do Google',
                    style: Theme.of(context).textTheme.bodyLarge,
                  ),
                  Spacer(),
                  ElevatedButton(
                    key: const Key('auth_button'),
                    onPressed: _authController.signInWithGoogle,
                    child: Row(
                      spacing: 12,
                      mainAxisAlignment: MainAxisAlignment.center,
                      crossAxisAlignment: CrossAxisAlignment.center,
                      children: [
...
